fix: cambio de seleccion de collapse para filtros

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -31,3 +31,7 @@
   -webkit-transform: rotate(90deg) !important;
   transform: rotate(90deg) !important;
 }
+
+#filter_box.card:not(.collapsed-card) .card-header #icon_filter_box:before{
+  content: "\f068" !important;
+}
